--- a/index.html
+++ b/index.html
@@ -10,23 +10,31 @@
     <link rel="stylesheet" href="css/fontawesome-all.min.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body>data-spy="scroll" data-target="#main-nav">
+	<body
     <!-- body site code here -->
     <section id="home-section">
         <div class="container text-center">
+					::before
             <div class="row">
+							::before
                 <div class="col-xs-12 col-md-6 col-md-offset-3">
                     <h1>There is room for you at our table.</h1>
                     <a href="#menu-section" class="btn btn-primary">View our menu</a> <a href="#reservation-section" class="btn btn-primary">Make a reservation</a>
-                </div>
+                    <a href="#reservation-section" class="btn btn-primary">  Make a reservation></a>
+									  </div>
+										::after
             </div><!-- /.row -->
         </div><!-- /.container -->
     </section><!-- /#home-section -->
 
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default affix-top" data-spy="affix" data-offset-top="500" id="main-nav">
+			::before
         <div class="container">
+				::before
         <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
+							::before
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -35,7 +43,10 @@
                 </button>
                 <a class="navbar-brand" href="index.html">
                     <h1 class="text-center">Chefs Table</h1>
-                    <div class="clearfix"></div>
+                    <div class="clearfix">
+                    	::before
+											::after
+                    </div>
                 </a>
             </div> <!-- /.navbar-header -->
 
@@ -45,10 +56,44 @@
                     <li><a href="#about-section">About</a></li>
                     <li><a href="#menu-section">Explore the Menu</a></li>
                     <li><a href="#reservation-section">Make a Reservation</a></li>
+										<li><a href="part2.html">PART TWO</a>
+										</li>
                 </ul>
             </div><!-- /.navbar-collapse -->
+						::after
         </div><!-- /.container -->
+				::after
     </nav><!-- /.navbar -->
+		<section id="about-section">
+			<div class="container">
+				::before
+				<div class="row">
+					::before
+				<div class="col-md-4 col md-offset-1">
+					<h2> A unique culinary experience.</h2
+						<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</p>
+				></div>
+				<div class="col-md-6">
+					<img src="img/blueberries.jpg" alt class="img-responsive">
+				</div>
+				::after
+			</div>
+			<section id="menu-section">
+				<div class="container">
+					::before
+					<div class="row">
+						::before
+						<div class="col-md-10 col-md-offset-1">
+							<h2> Explore our menu</h2>
+							<p> Lorem ipsum dolor sit amet, conseisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+							<div>
+								<!--Nav tabs-->
+								<ul>class="nav nav-tabs menu-tab text-center" role="tablist">
+
+								</ul>
+
+
 
     <!-- link all the scripts here -->
     <script src="js/jquery-3.3.1.min.js" charset="utf-8"></script>
